--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         </div>
                         <div class="form-group">
                             <label for="strengthLevel">Caffeine Rating</label>
-                            <input type="range" name="strength" id="strengthLevel" value="30">
+                            <input type="range" name="strength" id="strengthLevel" value="30" min="20" max="80">
                         </div>
                         <button type="submit" class="btn btn-default">Submit</button>
                         <button type="reset" class="btn btn-default">Reset</button>
@@ -58,6 +58,8 @@
                 </div>
             </div>
         </section>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+        <script src="scripts/formhandler.js" charset="utf-8"></script>
         <script src="scripts/datastore.js" charset="utf-8"></script>
         <script src="scripts/truck.js" charset="utf-8"></script>
         <script src="scripts/main.js" charset="utf-8"></script>
