--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
                                 Grande
                             </label>
                         </div>
+                        <div>
+                            <label>
+                                <input type="radio" name="size" value="oinkoink">
+                                Super Size
+                            </label>
+                        </div>
+
                         <div class="form-group">
                             <label for="flavorShot">Flavor Shot</label>
                             <select name="flavor" id="flavorShot" class="form-control">
